--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -779,20 +779,20 @@ input[type="range"]:focus {
   outline: none;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-  background:  #f93e45;
+  background: #f93e45;
 }
 input[type="range"]:focus::-ms-fill-lower {
-  background:  #f93e45;
+  background: #f93e45;
 }
 input[type="range"]:focus::-ms-fill-upper {
-  background:  #f93e45;
+  background: #f93e45;
 }
 input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
   animate: 0.2s;
-  background:  #f93e45;
+  background: #f93e45;
   border-radius: 1px;
   box-shadow: none;
   border: 0;
@@ -801,7 +801,7 @@ input[type="range"]::-webkit-slider-thumb {
   z-index: 2;
   position: relative;
   box-shadow: 0px 0px 0px #000;
-  border: 1px solid  #f93e45;
+  border: 1px solid #f93e45;
   height: 18px;
   width: 18px;
   border-radius: 25px;
@@ -824,7 +824,7 @@ input[type="range"]::-moz-range-thumb {
   z-index: 2;
   position: relative;
   box-shadow: 0px 0px 0px #000;
-  border: 1px solid  #f93e45;
+  border: 1px solid #f93e45;
   height: 18px;
   width: 18px;
   border-radius: 25px;
@@ -842,7 +842,7 @@ input[type="range"]::-ms-track {
 }
 input[type="range"]::-ms-fill-lower,
 input[type="range"]::-ms-fill-upper {
-  background:  #f93e45;
+  background: #f93e45;
   border-radius: 1px;
   box-shadow: none;
   border: 0;
@@ -851,7 +851,7 @@ input[type="range"]::-ms-thumb {
   z-index: 2;
   position: relative;
   box-shadow: 0px 0px 0px #000;
-  border: 1px solid  #f93e45;
+  border: 1px solid #f93e45;
   height: 18px;
   width: 18px;
   border-radius: 25px;
@@ -865,9 +865,6 @@ input[type="range"]::-ms-thumb {
 }
 .banner-hidden {
   display: hidden;
-}
-.banner-area {
-  overflow: hidden;
 }
 
 .banner-area {
@@ -939,6 +936,7 @@ input[type="range"]::-ms-thumb {
   background-repeat: no-repeat;
   position: relative;
   text-align: center;
+  overflow: scroll !important;
 }
 /* .banner-area .banner-slider-item:before {
   position: absolute;
