--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,27 @@ body {
   background-color: #fff;
   font-size: 16px;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
 
 h1,
 h2,
@@ -155,10 +176,10 @@ span.caret {
   background-color: white !important;
 }
 .dropdown-menu {
+  max-height: 500px;
   width: 100%;
-  overflow: auto !important;
+  overflow-y: scroll;
   padding: 5px;
-  overflow: visible !important;
 }
 .navbar-bar {
   padding: 0 !important;
