--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1961,6 +1961,7 @@ input[type="range"]::-ms-thumb {
 }
 
 .property-item {
+  position: relative;
   background-color: #fff;
   border-radius: 5px;
   margin-bottom: 30px;
@@ -1968,7 +1969,20 @@ input[type="range"]::-ms-thumb {
   transition: 0.5s;
   margin-top: 5px;
 }
-
+.property-item .share-options {
+  position: absolute;
+  top: 80%;
+  left: 30%;
+  z-index: 99999;
+  background-color: #ffffff;
+  padding: 10px 20px;
+  /* opacity: 0; */
+}
+.share-options-item {
+  padding: 5px 10px;
+  z-index: 999999999;
+  font-size: 1.4rem;
+}
 .property-item:hover {
   -webkit-transform: translate(0, -5px);
   transform: translate(0, -5px);
