--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1030,7 +1030,10 @@ input[type="range"]::-ms-thumb {
   height: 90vh;
   background-size: cover;
   background-position: center center;
-  background-image: url("../images/banner/banner1.jpg");
+  /* background-color: rgba(0, 0, 0, 1);
+  background-image: url("../images/banner/banner1.jpg"); */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/banner/banner1.jpg) center/cover;
   background-repeat: no-repeat;
   position: relative;
   text-align: center;
@@ -1055,15 +1058,18 @@ input[type="range"]::-ms-thumb {
 }
 
 .banner-one {
-  background-image: url("../images/banner/banner1.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/banner/banner1.jpg) center/cover;
 }
 
 .banner-two {
-  background-image: url("../images/banner/banner2.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/banner/banner2.jpg) center/cover;
 }
 
 .banner-three {
-  background-image: url("../images/banner/banner3.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/banner/banner3.jpg) center/cover;
 }
 
 .banner-content {
