--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,13 @@
 .navlink {
-  margin-top: 90px;
+  margin-top: 30px;
 }
 .navlink ul {
-  margin: 0;
+  margin: 0 !important;
+  text-align: center;
 }
 .navlink ul li {
   list-style: none;
-  margin: 20px 0;
+  margin: 20px 20px;
 }
 .navlink ul li a {
   font-size: 1rem;
