--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,6 +58,39 @@ body {
   background: #b30000;
 }
 
+/* //scrol to top */
+#scroll {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  background-color: #3498db;
+  text-indent: -9999px;
+  display: none;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  border-radius: 60px;
+}
+#scroll span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -8px;
+  margin-top: -12px;
+  height: 0;
+  width: 0;
+  border: 8px solid transparent;
+  border-bottom-color: #ffffff;
+}
+#scroll:hover {
+  background-color: #e74c3c;
+  opacity: 1;
+  filter: "alpha(opacity=100)";
+  -ms-filter: "alpha(opacity=100)";
+}
+
 h1,
 h2,
 h3,
@@ -6315,7 +6348,7 @@ blockquote i {
   margin-left: 22px;
   color: #555;
 }
-.text-bold{
+.text-bold {
   font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
