--- a/src/Page/Comparison/style.css
+++ b/src/Page/Comparison/style.css
@@ -3,7 +3,7 @@
 Primary style
 
 -------------------------------- */
-*,
+/* *,
 *::after,
 *::before {
   box-sizing: border-box;
@@ -27,7 +27,7 @@ a {
 
 img {
   max-width: 100%;
-}
+} */
 /* @media only screen and (min-width: 1170px) {
   h1 {
     font-size: 4rem;
