--- a/public/assets/css/meanmenu.css
+++ b/public/assets/css/meanmenu.css
@@ -19,7 +19,7 @@ a.meanmenu-reveal {
   padding: 20px 0 0;
   z-index: 999;
   border-bottom: 1px solid rgba(0, 0, 0, 0.03);
-  height: 55px;
+  height: 50px !important;
 }
 .mean-container a.meanmenu-reveal {
   width: 35px;
@@ -56,6 +56,7 @@ a.meanmenu-reveal {
   width: 100%;
   border: none;
   list-style-type: none;
+  /* height: 295px; */
 }
 .mean-container .mean-nav ul li {
   position: relative;
